--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -1,15 +1,32 @@
-
-.normal {
-  font-family: Georgia, sans-serif;
-  text-align: center;
+.container {
+  display: flex;
+  height: 100%;
+  flex-direction: column;
+  box-sizing: border-box
 }
 
-.title {
-  font-size: 2.5rem;
-  font-weight: normal;
-  letter-spacing: -1px;
-  background: darkslateblue;
-  padding: .6em 0;
-  color: white;
-  margin: 0;
+.top {
+  height: 60px;
+  background: #233;
+}
+
+.bottom {
+  flex: 1;
+  display: flex;
+  background: blue;
+
+}
+
+.bottom .bleft {
+  width: 200px;
+  background: red;
+  margin: 10px;
+  border-radius: 5px;
+}
+
+.bottom .bright {
+  flex: 1;
+  background: green;
+  margin: 10px;
+  border-radius: 5px;
 }
